@startuml e-commercial platform

enum Role {
  Customer
  Agency
  Admin
}

entity User {
  *id: String
  --
  *name: String
  *email: String
  *password: String
  *phone: String
  *role: String
}

entity Cart {
  *id: String
  --
  userId: String
}

entity Product {
  *id : String
  --
  *name: String
  *price: Number
  userId: String
  cartId: String
  billingId: String
}

entity Transaction {
  *id: String
  --
  time: Date
  userId: String
}

entity Billing {
  *id: String
  --
  time: Date
  totalCost: Number
  transactionId: String
}

User ||--|| Cart
User ||--|{ Transaction
User ||--|{ Product
Transaction ||--|| Billing
Billing ||--|{ Product
Cart ||--|{ Product

@enduml